# pymads

./: .gitignore  LICENSE  README.md  core_functions.md  feasibility_report.md  mkdocs.yml  pyproject.toml  todo.md
docs/: index.md
docs/codebase_analysis/: structure_overview.md
docs/development/: contributing.md  setup.md
docs/tools/: binary_comparison.md
examples/: hello_world.asm
pascal_env/: README.md
scripts/: binary_compare.md  binary_compare.py
src/pymads/: cli.py
src/pymads/core/: symbols.py
src/pymads/utils/: file_io.py  text.py
tests/: test_cli.py
tests/utils/: test_file_io.py  test_file_io.py   # Update expected values for Windows-style paths  test_text.py
